--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -10,4 +10,5 @@
 
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="fr.pinguet62.jcar.HomeController">
 	<Button text="LED Messenger" onAction="#ledMessengerButtonClick" />
+    <Button text="Backup camera" onAction="#backupCameraButtonClick" />
 </VBox>
