--- a/src/main/resources/fxml/layout.fxml
+++ b/src/main/resources/fxml/layout.fxml
@@ -7,11 +7,10 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.pinguet62.jcar.ManagerController">
 	<top>
-		<HBox BorderPane.alignment="CENTER">
+		<HBox>
 			<children>
 				<Button fx:id="back" disable="true" mnemonicParsing="false" onAction="#back" text="Return" />
-				<Label text="Label" />
-				<Button mnemonicParsing="false" onAction="#addElement" text="+" />
+				<Label fx:id="clock" text="00:00:00" />
 			</children>
 		</HBox>
 	</top>
