--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -11,5 +11,6 @@
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="fr.pinguet62.jcar.HomeController">
 	<Button text="LED Messenger" onAction="#ledMessengerButtonClick" />
 	<Button text="Backup camera" onAction="#backupCameraButtonClick" />
+    <Button text="Cameras" onAction="#camerasButtonClick" />
 	<Button text="Vidéo" onAction="#videoButtonClick" />
 </VBox>
